--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -21,6 +22,8 @@
     "mongodb-memory-server": "^8.9.3",
     "mongoose": "^6.6.5",
     "morgan": "^1.10.0",
+    "react": "^18.2.0",
+    "react-scripts": "^5.0.1",
     "routes": "^2.1.0"
   }
 }
